<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.dartmouth.cs.chrono.AddTaskActivity"
    tools:showIn="@layout/activity_add_task">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/add_task_title" >
        </TextView>

        <EditText
            android:id="@+id/add_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/add_task_title_hint" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/add_task_deadline" >
        </TextView>

        <DatePicker
            android:id="@+id/add_task_deadline_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            />

        <TimePicker
            android:id="@+id/add_task_deadline_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/add_task_urgency" >
        </TextView>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_task_urgency_bar"
            android:numStars="5"
            android:stepSize="1.0"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/add_task_importance" >
        </TextView>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_task_importance_bar"
            android:numStars="5"
            android:stepSize="1.0"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/add_task_duration" >
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/add_task_duration_hours"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:inputType="number">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="hours" >
            </TextView>

            <EditText
                android:id="@+id/add_task_duration_minutes"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:inputType="number" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="minutes" >
            </TextView>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/add_task_split_task" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/add_task_min_split" >
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/add_task_min_split_hours"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:inputType="number">
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="hours" >
            </TextView>

            <EditText
                android:id="@+id/add_task_min_split_minutes"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:inputType="number" >
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="minutes" >
            </TextView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
